# ML_Environment

./: .env  .gitignore  Code_request.py  Dockerfile  README.md  Readme  docker-compose.yml  pyproject.toml  requirements.txt  test_boto.py  test_case.json  weights
app/: __init__.py  __main__.py  main.py  main_without_s3.py
app/api/: __init__.py  healthcheck.py  inference.py  ml_models.py  testpy
app/core/: __init__.py  application.py  config.py  gunicorn_runner.py  inference.py  lifetime.py
app/ml_models_utils/: ml_model_loaders.py  model_manager.py
app/model_utils/: __init__.py
app/models/: model_1.py  model_2.py  model_example1.py  model_example2.py
app/schemas/: __init__.py  inference_scheme.py  models_scheme.py  request.py  response.py
app/services/: __init__.py  model_inference.py
app/utils/: __init__.py  custom_exceptions.py  image_utils.py  model_utils.py  s3_utils.py  utils.py
nginx/conf.d/: default.conf
