[tool.poetry]
name = "ml-api"
version = "0.1.0"
description = "\"APIs For ML Models\""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
pillow = "^10.4.0"
python-multipart = "^0.0.9"
pydantic = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
